--- a/demo.ipynb
+++ b/demo.ipynb
@@ -343,11 +343,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  95.47738693467338\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Gaussian Naive Bayes\n",
+    "import pandas as pd\n",
+    "data = pd.read_csv(\"Diabetes.csv\")\n",
+    "\n",
+    "x = data.drop('diabetes', axis= 1)\n",
+    "y = data['diabetes']\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, train_size= 0.80, random_state= 9)\n",
+    "\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "gn = GaussianNB()\n",
+    "gn.fit(x_train, y_train)\n",
+    "y_pred = gn.predict(x_test)\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "ac = accuracy_score(y_pred, y_test)\n",
+    "print(\"Accuracy: \", ac*100)"
+   ]
   },
   {
    "cell_type": "code",
