--- a/demo.ipynb
+++ b/demo.ipynb
@@ -385,10 +385,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80.03992015968065\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Bernoulis NAIVE BAYES\n",
+    "\n",
+    "import pandas as pd\n",
+    "data = pd.read_csv('adult.csv')\n",
+    "data = data.drop('final weight', axis=1)\n",
+    "data = data.drop('Sex', axis=1)\n",
+    "data = data.drop('Race', axis=1)\n",
+    "data = data.drop('Education Number', axis=1)\n",
+    "\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "le = LabelEncoder()\n",
+    "data['Employment'] = le.fit_transform(data['Employment'])\n",
+    "data['Native Country'] = le.fit_transform(data['Native Country'])\n",
+    "data['Martial Status'] = le.fit_transform(data['Martial Status'])\n",
+    "data['Relationship'] = le.fit_transform(data['Relationship'])\n",
+    "data['education'] = le.fit_transform(data['education'])\n",
+    "data['occupation'] = le.fit_transform(data['occupation'])\n",
+    "\n",
+    "x = data.iloc[:, :-1]\n",
+    "y = data.iloc[:, -1]\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, train_size=0.80, random_state=9)\n",
+    "\n",
+    "from sklearn.naive_bayes import BernoulliNB\n",
+    "nb = BernoulliNB()\n",
+    "\n",
+    "nb.fit(x_train, y_train)\n",
+    "y_pred = nb.predict(x_test)\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "print(accuracy_score(y_pred, y_test)*100)"
+   ]
   },
   {
    "cell_type": "code",
@@ -399,10 +440,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multiinoial Naive Bayes\n",
+    "\n",
+    "import pandas as pd\n",
+    "data = pd.read_csv('imdb.csv')\n",
+    "\n",
+    "x = data['review']\n",
+    "y = data['sentiment']\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=101)\n",
+    "\n",
+    "\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vc = CountVectorizer(stop_words='english')\n",
+    "x_train = vc.fit_transform(x_train)\n",
+    "x_test = vc.transform(x_test)\n",
+    "\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "nb = MultinomialNB()\n",
+    "nb.fit(x_train, y_train)\n",
+    "y_pred = nb.predict(x_test)\n",
+    "\n",
+    "# from sklearn.metrics import accuracy_score\n",
+    "# print(accuracy_score(y_pred, y_test)*100)\n",
+    "\n",
+    "# a = ['abhi is a bad boy']\n",
+    "# a = vc.transform(a)\n",
+    "# predict = nb.predict(a)\n",
+    "\n",
+    "# if predict == 'positive':\n",
+    "#     print('Positive')\n",
+    "# else:\n",
+    "#     print('Negative')\n",
+    "    \n",
+    "    \n",
+    "a = input(\"Enter the review: \")\n",
+    "a = vc.transform([a])\n",
+    "predict = nb.predict(a)\n",
+    "\n",
+    "if predict[0] == 'positive':\n",
+    "    print('Positive')\n",
+    "else:\n",
+    "    print('Negative')\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
