--- a/demo.ipynb
+++ b/demo.ipynb
@@ -762,7 +762,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "p-310",
    "language": "python",
    "name": "python3"
   },
@@ -776,7 +776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
